@@ -5,22 +5,27 @@
 # 	end
 # end
 
+# for user login
 #['/view/operate', '/admin/*', '/www/edit/post', '/www/comment'].each do | path |
-['/view/operate', '/admin/*', '/www/edit/post'].each do | path |
-	before path do
-		view_login?
-	end
-end
+# ['/admin/*', '/www/edit/post'].each do | path |
+# 	before path do
+# 		view_login?
+# 	end
+# end
 
-before '/www/comment' do
-	unless _var3(:www_comment_open)
-		redirect back
-	end
+before '/www/edit/post' do
+	view_login?
 end
 
 before '/view/operate' do
 	if params[:_name] == 'www_posts'
-		#view_level? _var(:www_post_level)
+		view_level? _var(:www_post_level)
+	elsif params[:_name] == 'www_comments'
+		if _var3(:www_comment_open)
+			view_level? _var(:www_comment_level)
+		else
+			redirect back
+		end
 	else
  		view_level? _var(:view_post_level)
 	end
